# app_fintess

./: CMakeLists.txt  Dockerfile  compose.yaml
qml/: Main.qml  ShadowText.qml
qml/components/: ArrowButton.qml  Input.qml  SettingButton.qml  ShButton.qml  ShadowText.qml
qml/screens/: Auth.qml  Register.qml
qml/screens/app/: App.qml
qml/screens/auth/: Recovery.qml  Register.qml
src/: main.cpp
src/core/: appcontroller.cpp  appcontroller.h
src/database/: databasemanager.cpp  databasemanager.h
src/database/daos/: userdao.cpp  userdao.h
src/database/models/: training.cpp  training.h
